--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -28,7 +28,7 @@
               <div class="card-body">
                 <h5 class="card-title"></h5>
                 <form action="/app/MainFlask/__init__.py" method="get">
-                  User's File: <input type="file" file="userfile">
+                  User's File: <input type="file" file="userFile">
                   <input type="submit" value="Submit" />
               </form>
               </div>
