--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -27,10 +27,19 @@
             <div class="card" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title"></h5>
-                <form action="/app/MainFlask/__init__.py" method="get">
-                  User's File: <input type="file" file="userFile">
+                <form action="/cgi-bin/cvpython.py" method="post">
+                  User's File: <input type="file" name="userFile">
                   <input type="submit" value="Submit" />
-              </form>
+                </form>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+                <form action="/cgi-bin/cvpython.py" method="get">
+                  User's URL: <input type="text" name="UserURL">
+                  <input type="submit" value="Submit" />
+                </form>
               </div>
             </div>
           </div>
