--- a/app/virusapi/templates/index.html
+++ b/app/virusapi/templates/index.html
@@ -1,20 +1,45 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello, world!</title>
-  </head>
+    <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>VT API Test</title>
+      <link rel="stylesheet" href="../static/css/styling.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
+        rel="stylesheet"
+      />
+      
+    </head>
+
   <body>
-    <h1>Hello, world!</h1>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="background--custom">
+    <h1><p style="text-align:center">MalwareGuard</p></h1>
+      <h5><p style="text-align:center">Hi there! Welcome to MalwareGuard</h5><p style="text-align:center">If you want to know more about me, take a look around!</p>.
         </div>
-    </div>
+      </div>
+        <div class="flex-container">
+          
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title"></h5>
+                <form action="/app/MainFlask/__init__.py" method="get">
+                  User's File: <input type="file" file="userFile">
+                  <input type="submit" value="Submit" />
+              </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>     
+  
+  {% block content %}
+  
+  {% endblock %}
   </body>
 </html>
