--- a/app/virusapi/templates/test.html
+++ b/app/virusapi/templates/test.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>VT API Test</title>
+      <title>{% block title %} {% endblock %}</title>
       <link rel="stylesheet" href="../static/css/styling.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,18 +19,19 @@
   <body>
     <div class="background--custom">
     <h1><p style="text-align:center">MalwareGuard</p></h1>
-      <h5><p style="text-align:center">Hi there! Welcome to MalwareGuard</h5><p style="text-align:center">If you want to know more about me, take a look around!</p>.
+      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{ reponsedata["data"]["category"] }}</p>.
         </div>
+        
       </div>
         <div class="flex-container">
-    <form action="/cgi-bin/cvpython.py" method="post">
-      User's URL: <input type="text" name="UserURL" value="{{ request.form['UserURL'] }}">
-      <input type="submit" value="Submit" /> 
-    </form>
-    <form action="/cgi-bin/cvpython.py" method="post">
-      User's File: <input type="file" name="userFile" value="{{ request.form['userfile'] }}">
-      <input type="submit" value="Submit" />
-    </form>
+        
+        
+        
+        
+        
+          {% block content %} {% endblock %}
+        </div>
+ 
       
   
     <!-- Optional JavaScript; choose one of the two! -->
