--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -23,14 +23,11 @@
         </div>
       </div>
         <div class="flex-container">
-    <form action="/cgi-bin/cvpython.py" method="post">
+    <form action="/" method="post">
       User's URL: <input type="text" name="UserURL" value="{{ request.form['UserURL'] }}">
       <input type="submit" value="Submit" /> 
     </form>
-    <form action="/cgi-bin/cvpython.py" method="post">
-      User's File: <input type="file" name="userFile" value="{{ request.form['userfile'] }}">
-      <input type="submit" value="Submit" />
-    </form>
+   
       
   
     <!-- Optional JavaScript; choose one of the two! -->
