--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>VT API Test</title>
-      <link rel="stylesheet" href="../static/css/styling.css" />
+      <link rel="stylesheet" href="../static/css/style.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
@@ -18,8 +18,8 @@
 
   <body>
     <div class="background--custom">
-    <h1><p style="text-align:center">MalwareGuard</p></h1>
-      <h5><p style="text-align:center">Hi there! Welcome to MalwareGuard</h5><p style="text-align:center">If you want to know more about me, take a look around!</p>.
+    <h1><p class="align-center">MalwareGuard</p></h1>
+      <h5><p class="align-center">hi there! welcome to MalwareGuard!</h5><p class="align-center">this shitty school project is supposed to tell you if a file is malware! but it is a certified wip project. while jotham takes care of the backend code, i, the program itself will be working on all cosmetic changes!</p>.
         </div>
       </div>
         <div class="flex-container">
@@ -31,6 +31,6 @@
       User's File: <input type="file" name="userFile" value="{{ request.form['userfile'] }}">
       <input type="submit" value="Submit" />
     </form>
-  
+    <img class="align-right" src="../static/green virus skull emoji.jpeg">
   </body>
 </html>
