--- a/app/virusapi/static/css/style.css
+++ b/app/virusapi/static/css/style.css
@@ -1,4 +1,30 @@
-h1, h2, h3, h4, h5, h6{
+body {
+    background-color: black;
+    font-family: "Source Code Pro";
+    color: #00d700;
+}
 
-    font-family: "Source Code Pro", monospace
+h1{
+    font-size: 45pt;
+    font-weight: 700
+}
+
+h2{
+    font-size: 32pt;
+    font-weight: 700
+}
+
+h5{
+    font-size: 27pt;
+    font-weight: 700
+}
+
+.align-center{
+    text-align: center;
+    align-content: center;
+}
+
+.align-right{
+    text-align: right;
+    align-content: right;
 }
