--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -31,6 +31,6 @@
       User's File: <input type="file" name="userFile" value="{{ request.form['userfile'] }}">
       <input type="submit" value="Submit" />
     </form>
-    <img class="align-right" src="../static/green virus skull emoji.jpeg">
+    <img class="align-right goofy-virus-img" src="../static/green virus skull emoji.jpeg">
   </body>
 </html>
