--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -15,7 +15,6 @@
       />
       
     </head>
-
   <body>
     <div class="background--custom">
     <h1><p style="text-align:center">MalwareGuard</p></h1>
@@ -23,9 +22,10 @@
         </div>
       </div>
         <div class="flex-container">
-    <form action="/" method="post">
-      User's URL: <input type="text" name="UserURL" value="{{ request.form['UserURL'] }}">
+    <form action="UserURL" method="post">
+      User's URL: <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
       <input type="submit" value="Submit" /> 
+      <a href="/UserURL"> </a>
     </form>
    
       
