--- a/app/virusapi/templates/results.html
+++ b/app/virusapi/templates/results.html
@@ -19,7 +19,7 @@
   <body>
     <div class="background--custom">
     <h1><p style="text-align:center">MalwareGuard</p></h1>
-      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{ reponsedata["data"]["category"] }}</p>.
+      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{data}}</p>
         </div>
         
       </div>
@@ -40,6 +40,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
    
-    -->
+ 
   </body>
 </html>
