--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -19,7 +19,7 @@
   <body>
     <div class="background--custom">
     <h1 class="align-center">MalwareGuard</h1>
-      <h5 class="align-center">hi there! welcome to MalwareGuard!</h5><p class="align-center regular-text">this shitty school project is supposed to tell you if a file is malware! but it is a certified wip project. while jotham takes care of the backend code, i, the program itself will be working on all cosmetic changes!</p>.
+      <h5 class="align-center">hi there! welcome to MalwareGuard!</h5><p class="align-center regular-text">this goofy school project is supposed to tell you if a file is malware! but it is a certified wip project. while jotham takes care of the backend code, i, the program itself will be working on all cosmetic changes!</p>.
         </div>
       </div>
         <div class="flex-container">
