--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -25,7 +25,7 @@
     <form action="UserURL" method="post">
       User's URL: <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
       <input type="submit" value="Submit" /> 
-      <a href="/UserURL"> </a>
+      <a href="/UserURL{{URL}}"> </a>
     </form>
    
       
