--- a/app/virusapi/templates/results.html
+++ b/app/virusapi/templates/results.html
@@ -19,7 +19,7 @@
   <body>
     <div class="background--custom">
     <h1><p style="text-align:center">MalwareGuard</p></h1>
-      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{data1}}</p>
+      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{ result }}</p>
         </div>
         
       </div>
