--- a/app/virusapi/templates/results.html
+++ b/app/virusapi/templates/results.html
@@ -24,7 +24,8 @@
         
       </div>
         <div class="flex-container">
-        
+          <h5><p style="text-align:center"></h5><p style="text-align:center">If the amount of votes for harmless are beyond a 5 percent margin of error, the URL is most likely harmless, if otherwise, it is suspicious or most likely harmful.</p>
+
         
         
         
