--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -23,7 +23,7 @@
       </div>
         <div class="flex-container">
     <form action="UserURL" method="post">
-      User's URL: <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
+      User's URL (Simple Form without https): <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
       <input type="submit" value="Submit" /> 
       <a href="results{{ hash }}"> </a>
     </form>
