--- a/app/virusapi/templates/results.html
+++ b/app/virusapi/templates/results.html
@@ -1,46 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>{% block title %} {% endblock %}</title>
-      <link rel="stylesheet" href="../static/css/styling.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
-        rel="stylesheet"
-      />
-      
-    </head>
+{% extends "base.html" %}
+{% block content %}
 
   <body>
     <div class="background--custom">
     <h1><p style="text-align:center">MalwareGuard</p></h1>
-      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL is {{ result }}</p>
+      <h5><p style="text-align:center"></h5><p style="text-align:center">Your URL has {{ result["malicious"] }} votes for being a harmful site and {{ result["harmless"] }} votes for being harmless.</p>
         </div>
         
       </div>
         <div class="flex-container">
           <h5><p style="text-align:center"></h5><p style="text-align:center">If the amount of votes for harmless are beyond a 5 percent margin of error, the URL is most likely harmless, if otherwise, it is suspicious or most likely harmful.</p>
-
-        
-        
-        
-        
-          {% block content %} {% endblock %}
         </div>
- 
-      
-  
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-   
- 
   </body>
 </html>
+{% endblock %}
