--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -17,21 +17,12 @@
     </head>
   <body>
     <div class="topnav">
-      <a class="active" href="base">Home</a>
-      <a href="threats">Popular Threat Categories</a>
-      <a href="about">About</a>
+      <a class="active" href="/">Home</a>
+      <a href="/threats">Popular Threat Categories</a>
+      <a href="/about">About</a>
     </div>
-    <div class="background--custom">
-    <h1 class="align-center">MalwareGuard</h1>
-      <h5 class="align-center">hi there! welcome to MalwareGuard!</h5><p class="align-center regular-text">this goofy school project is supposed to tell you if a file is malware! but it is a certified wip project. while jotham takes care of the backend code, i, the program itself will be working on all cosmetic changes!</p>.
-        </div>
-      </div>
-        <div class="flex-container">
-    <form action="UserURL" method="post">
-      User's URL (Simple Form without https): <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
-      <input type="submit" value="Submit" /> 
-      <a href="results{{ hash }}"> </a>
-    </form>
-    <img class="align-right goofy-virus-img" src="../static/green virus skull emoji.jpeg">
-  </body>
+    {% block content %}
+    
+    {% endblock content %}
+    </body>
 </html>
