--- a/app/virusapi/templates/404.html
+++ b/app/virusapi/templates/404.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>no page 💀</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <h5>error wee woo wee woo wee woo</h5>
     <h1>there is no html file set to handle this result</h1>
     <span>how do you have a skill issue with searching? i hope you mispelled your search because dang man?</span>
   </body>
 </html>
+{% endblock content %}
