--- a/app/virusapi/templates/base.html
+++ b/app/virusapi/templates/base.html
@@ -5,24 +5,41 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>VT API Test</title>
-      <link rel="stylesheet" href="../static/css/style.css" />
+      <title>Dr Suess Story Generator</title>
+      <link rel="stylesheet" href="../static/css/styling.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
-        rel="stylesheet"
-      />
-      
+      <link href="static/css/styles.css" rel="stylesheet" />
     </head>
   <body>
-    <div class="topnav">
-      <a class="active" href="/">Home</a>
-      <a href="/threats">Popular Threat Categories</a>
-      <a href="/about">About</a>
+    <div class="background--custom">
+        <h1><p style="text-align:center">Dr. Suess Story Generator</p></h1>
+        <h5><p style="text-align:center">Hi there! Welcome to the Dr. Suess Story Generator.</h5>
+      <div class="flex-container">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">How does it work?</h5>
+            <p class="card-text">The generator will take your input and convert it to a story using the GPT-neo model. </p>
+          </div>
+        </div>
+
+        <form action="UserPayload" method="post">
+          Dr. Suess Story Prompt: <input type="text" name="UserPayload" value="{{ request.form.UserPayload }}">
+          <input type="submit" value="Submit" /> 
+          <a href="results{{ UserPayload }}"> </a>
+        </form>
+      </div>
     </div>
-    {% block content %}
+
+   
+      
+  
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+   
     
-    {% endblock content %}
-    </body>
+  </body>
 </html>
