--- a/app/virusapi/templates/index.html
+++ b/app/virusapi/templates/index.html
@@ -1,17 +1,39 @@
-{% extends "base.html" %}
-{% block content %}
-<div class="background--custom">
-    <h1 class="align-center">MalwareGuard</h1>
-      <h5 class="align-center">hi there! welcome to MalwareGuard!</h5><p class="align-center regular-text">this goofy school project is supposed to tell you if a file is malware! but it is a certified wip project. while jotham takes care of the backend code, i, the program itself will be working on all cosmetic changes!</p>.
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Stylish Portfolio - Start Bootstrap Template</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Simple line icons-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="static/css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+      <div class="background--custom">
+      
+        <!-- Header-->
+        <header class="masthead d-flex align-items-center">
+            <div class="container px-4 px-lg-5 text-center">
+                <h1 class="mb-1">Dr Suess Text Generator</h1>
+                <h3 class="mb-5"><em>A Rethinking of Dr. Suess's works via GPT-neo</em></h3>
+                <a class="btn btn-primary btn-xl" href="/generator">Find Out More</a>
+            </div>
+        </header>
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
       </div>
-        <div class="flex-container">
-    <form action="UserURL" method="post">
-      User's URL (Simple Form without https): <input type="text" name="UserURL" value="{{ request.form.UserURL }}">
-      <input type="submit" value="Submit" /> 
-      <a href="results{{ hash }}"> </a>
-    </form>
-    <img class="align-right goofy-virus-img" src="../static/green virus skull emoji.jpeg">
-  </body>
+    </body>
 </html>
-{% endblock content%}
